Some missing parts

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
                     <li><a href="#introduction">Introduction</a></li>
                     <li><a href="#naming">Naming</a></li>
                     <li><a href="#building">Building</a></li>
+                    <li><a href="#faq">FAQ</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://blog.getbem.com">Blog</a></li>
@@ -41,7 +42,7 @@
     </nav>
 
     <div class="header">
-        <img src="/images/b.svg"  class="header__logo" width="144" height="144"/>
+        <img src="/images/b.svg"  class="header__logo"/>
         <h1 class="header__desc">BEM — Block Element Modifier is a methodology, that helps you to achieve reusable components and code sharing in the front-end.</h1>
     </div>
 
@@ -128,6 +129,14 @@
             <p>Brought to you by <a href="https://github.com/floatdrop">@floatdrop</a> and <a href="https://github.com/matmuchrapna">@matmuchrapna</a>.<br/>
             Maintained by the <a href="https://github.com/orgs/getbem/people">core team</a> with the help of our <a href="https://github.com/getbem/getbem.com/graphs/contributors">contributors</a>.<br/>
             Code licensed under <a href="https://github.com/getbem/getbem.com/blob/master/LICENSE.md">MIT</a>, documentation under <a href="https://github.com/getbem/getbem.com/blob/master/levels/pages/LICENSE.md">CC BY 3.0</a>.</p>
+
+            <ul class="list list-unstyled list-inline">
+                <li class="list__item"><a href="https://twitter.com/getbem">Twitter</a></li>
+                <li class="list__item"><a href="https://github.com/getbem/getbem.com/">GitHub</a></li>
+                <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues">Issues</a></li>
+                <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues/8">Project goals</a></li>
+                <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues/1">Are you using BEM?</a></li>
+            </ul>
         </div>
 
     </div>
