Move imports to HTML

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,14 @@
 <script src="config.js"></script>
 <script>
     /* global System */
-    System.import('index');
+    System.import('bootstrap');
+    System.import('github-buttons');
+    System.import('github-buttons/style.css!'); // Temporary hack to include styles
+    System.import('~/blocks/twitter');
+    System.import('~/blocks/advantage.css!');
+    System.import('~/blocks/footer.css!');
+    System.import('~/blocks/header.css!');
+    System.import('~/blocks/consumers.css!');
 </script>
 <body>
 
