Move requires back to index.js to enable bundleing

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,7 @@
 <script src="config.js"></script>
 <script>
     /* global System */
-    System.import('bootstrap');
-    System.import('github-buttons');
-    System.import('github-buttons/style.css!'); // Temporary hack to include styles
-    System.import('~/blocks/twitter');
-    System.import('~/blocks/advantage.css!');
-    System.import('~/blocks/footer.css!');
-    System.import('~/blocks/header.css!');
-    System.import('~/blocks/consumers.css!');
+    System.import('index');
 </script>
 <body>
 
@@ -55,19 +48,19 @@
 
     <div class="container">
         <div class="row advantages">
-            <div class="col-md-4">
+            <div class="col-sm-4">
                 <div class="advantage">
                     <h2 class="advantage__title advantage__title_green">Easy</h2>
                     <p class="advantage__desc">To use BEM you literally do not need nothing besides BEM naming.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-4">
                 <div class="advantage">
                     <h2 class="advantage__title advantage__title_blue">Modular</h2>
                     <p class="advantage__desc">Independent blocks and css selectors plus layer system makes your code reusable and modular.</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-4">
                 <div class="advantage">
                     <h2 class="advantage__title advantage__title_red">Flexible</h2>
                     <p class="advantage__desc">Methodology and tools, that can be recomposed and configured in the way you like BEM.</p>
