--- a/src/index.html
+++ b/src/index.html
@@ -8,139 +8,8 @@
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
-    /* global System, window */
-    System.import('index').then(function ($) {
-        $(window).trigger('load'); // Hack to enable bootstrap hooks
-    });
+    /* global System */
+    System.import('index.jsx!');
 </script>
-<body>
-
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Get BEM</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/introduction">Introduction</a></li>
-                    <li><a href="#naming">Naming</a></li>
-                    <li><a href="#building">Building</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://blog.getbem.com">Blog</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-
-    <div class="header">
-        <img src="/images/b.svg"  class="header__logo"/>
-        <h1 class="header__desc">BEM — Block Element Modifier is a methodology, that helps you to achieve reusable components and code sharing in the front-end.</h1>
-    </div>
-
-    <div class="container">
-        <div class="row advantages">
-            <div class="col-sm-4">
-                <div class="advantage">
-                    <h2 class="advantage__title advantage__title_green">Easy</h2>
-                    <p class="advantage__desc">To use BEM you literally do not need nothing besides BEM naming.</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="advantage">
-                    <h2 class="advantage__title advantage__title_blue">Modular</h2>
-                    <p class="advantage__desc">Independent blocks and css selectors plus layer system makes your code reusable and modular.</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="advantage">
-                    <h2 class="advantage__title advantage__title_red">Flexible</h2>
-                    <p class="advantage__desc">Methodology and tools, that can be recomposed and configured in the way you like BEM.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="consumers">
-            <h3 class="consumers__heading">Companies using BEM:</h3>
-            <div class="consumers__list">
-                <ul class="list list-inline list-unstyled">
-                    <li class="list__item consumers__item">
-                        <a href="https://yandex.com/" title="Yandex" class="consumers__item-link">
-                            <img src="/images/consumers/yandex.png" height="70" class="consumers__item-logo"/>
-                        </a>
-                    </li>
-                    <li class="list__item consumers">
-                        <a href="http://www.jetbrains.com/" title="JetBrains" class="consumers__item-link">
-                            <img src="/images/consumers/Jetbrains.png" height="70" class="consumers__item-logo"/>
-                        </a>
-                    </li>
-                    <li class="list__item consumers">
-                        <a href="http://factory.mn/" title="Manufactura" class="consumers__item-link">
-                            <img src="/images/consumers/manufactura.png" height="70" class="consumers__item-logo"/>
-                        </a>
-                    </li>
-                    <li class="list__item consumers">
-                        <a href="http://eu.ideus.biz/" title="iDeus" class="consumers__item-link">
-                            <img src="/images/consumers/ideus.png" height="70" class="consumers__item-logo">
-                        </a>
-                    </li>
-                    <li class="list__item consumers">
-                        <a href="http://alfabank.com/" title="Alfa-Bank" class="consumers__item-link">
-                            <img src="/images/consumers/alfabank.png" height="70" class="consumers__item-logo"/>
-                        </a>
-                    </li>
-                    <li class="list__item consumers">
-                        <a href="http://edster.ru/" title="Edster" class="consumers__item-link">
-                            <img src="/images/consumers/edster.png" height="70" class="consumers__item-logo"/>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="footer">
-            <ul class="list list-unstyled list-inline">
-                <li>
-                    <span class="github-btn hide" data-user="getbem" data-repo="getbem.com" data-type="watch" data-count="1"/>
-                </li>
-                <li>
-                    <span class="github-btn hide" data-user="getbem" data-repo="getbem.com" data-type="fork" data-count="1"/>
-                </li>
-                <li>
-                    <a href="https://twitter.com/getbem" class="twitter-follow-button footer__follow-fix" data-show-count="true" data-dnt="true">
-                        Follow @getbem
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="getbem" data-related="getbem" data-hashtags="b_" data-dnt="true">
-                        Tweet
-                    </a>
-                </li>
-            </ul>
-
-            <p>Brought to you by <a href="https://github.com/floatdrop">@floatdrop</a> and <a href="https://github.com/matmuchrapna">@matmuchrapna</a>.<br/>
-            Maintained by the <a href="https://github.com/orgs/getbem/people">core team</a> with the help of our <a href="https://github.com/getbem/getbem.com/graphs/contributors">contributors</a>.<br/>
-            Code licensed under <a href="https://github.com/getbem/getbem.com/blob/master/LICENSE.md">MIT</a>, documentation under <a href="https://github.com/getbem/getbem.com/blob/master/levels/pages/LICENSE.md">CC BY 3.0</a>.</p>
-
-            <ul class="list list-unstyled list-inline">
-                <li class="list__item"><a href="https://twitter.com/getbem">Twitter</a></li>
-                <li class="list__item"><a href="https://github.com/getbem/getbem.com/">GitHub</a></li>
-                <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues">Issues</a></li>
-                <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues/8">Project goals</a></li>
-                <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues/1">Are you using BEM?</a></li>
-            </ul>
-        </div>
-
-    </div>
-</body>
+<body></body>
 </html>
