--- a/src/introduction/index.html
+++ b/src/introduction/index.html
@@ -21,33 +21,7 @@
 </script>
 <body>
 
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Get BEM</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/introduction">Introduction</a></li>
-                    <li><a href="#naming">Naming</a></li>
-                    <li><a href="#building">Building</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://blog.getbem.com">Blog</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+    <Navbar/>
 
     <div class="container">
         <div class="row">
@@ -116,38 +90,7 @@
             </div>
         </div>
 
-        <div class="footer">
-            <ul class="list list-unstyled list-inline">
-                <li>
-                    <span class="github-btn hide" data-user="getbem" data-repo="getbem.com" data-type="watch" data-count="1"/>
-                </li>
-                <li>
-                    <span class="github-btn hide" data-user="getbem" data-repo="getbem.com" data-type="fork" data-count="1"/>
-                </li>
-                <li>
-                    <a href="https://twitter.com/getbem" class="twitter-follow-button footer__follow-fix" data-show-count="true" data-dnt="true">
-                        Follow @getbem
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="getbem" data-related="getbem" data-hashtags="b_" data-dnt="true">
-                        Tweet
-                    </a>
-                </li>
-            </ul>
-
-            <p>Brought to you by <a href="https://github.com/floatdrop">@floatdrop</a> and <a href="https://github.com/matmuchrapna">@matmuchrapna</a>.<br/>
-                Maintained by the <a href="https://github.com/orgs/getbem/people">core team</a> with the help of our <a href="https://github.com/getbem/getbem.com/graphs/contributors">contributors</a>.<br/>
-                Code licensed under <a href="https://github.com/getbem/getbem.com/blob/master/LICENSE.md">MIT</a>, documentation under <a href="https://github.com/getbem/getbem.com/blob/master/levels/pages/LICENSE.md">CC BY 3.0</a>.</p>
-
-                <ul class="list list-unstyled list-inline">
-                    <li class="list__item"><a href="https://twitter.com/getbem">Twitter</a></li>
-                    <li class="list__item"><a href="https://github.com/getbem/getbem.com/">GitHub</a></li>
-                    <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues">Issues</a></li>
-                    <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues/8">Project goals</a></li>
-                    <li class="list__item"><a href="https://github.com/getbem/getbem.com/issues/1">Are you using BEM?</a></li>
-                </ul>
-            </div>
+        <Footer/>
 
     </div>
 
